# reqstool-client

./: .gitignore  .reqstool-ai.yaml  CLAUDE.md  CODE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  PLAN.md  PLAN_CODE_SMELLS.md  README.md  TEST_MATRIX.md  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: build-docs.yml  build.yml  check-semantic-pr.yml  check_release.yml  lint.yml  publish-image.yml  publish_gh_pages.yml  release_prod.yml  release_test.yml  renovate-approve.yml
baselines/: README.md  pytest_output.txt  reqstool_demo__export.txt  reqstool_demo__report_adoc.txt  reqstool_demo__report_md.txt  reqstool_demo__status.txt  test_basic_baseline_ms-101__export.txt  test_basic_baseline_ms-101__report_adoc.txt  test_basic_baseline_ms-101__report_md.txt  test_basic_baseline_ms-101__status.txt  test_basic_lifecycle_ms-101__export.txt  test_basic_lifecycle_ms-101__report_adoc.txt  test_basic_lifecycle_ms-101__report_md.txt  test_basic_lifecycle_ms-101__status.txt  test_basic_lifecycle_validation_error__status.txt  test_basic_no_impls_basic_ms-101__export.txt  test_basic_no_impls_basic_ms-101__report_adoc.txt  test_basic_no_impls_basic_ms-101__report_md.txt  test_basic_no_impls_basic_ms-101__status.txt  test_basic_no_impls_with_error_ms-101__export.txt  test_basic_no_impls_with_error_ms-101__report_md.txt  test_basic_no_impls_with_error_ms-101__status.txt  test_delete_mvr_ms-001__export.txt  test_delete_mvr_ms-001__report_adoc.txt  test_delete_mvr_ms-001__report_md.txt  test_delete_mvr_ms-001__status.txt  test_delete_mvr_sys-001__export.txt  test_delete_mvr_sys-001__report_adoc.txt  test_delete_mvr_sys-001__report_md.txt  test_delete_mvr_sys-001__status.txt  test_errors_ms-101__export.txt  test_errors_ms-101__report_adoc.txt  test_errors_ms-101__report_md.txt  test_errors_ms-101__status.txt  test_standard_baseline_ms-001__export.txt  test_standard_baseline_ms-001__export_req010.txt  test_standard_baseline_ms-001__export_req010_svc022.txt  test_standard_baseline_ms-001__export_svc010.txt  test_standard_baseline_ms-001__generate_json.txt  test_standard_baseline_ms-001__report_adoc.txt  (+13 more)
docs/: DESIGN.md  PLAN.md  PLAN_openspec_reqstool.md  PLAN_remove_variants.md  antora-playbook.yml  lsp-server-plan.md
docs/dev/: PASS1_commands_discovery.md  PLAN_openspec_reqstool.md
docs/examples/requirements/: manual_verification_results.yml  requirements_external.yml  requirements_microservice.yml  requirements_system.yml  software_verification_cases.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/lsp/: reqstool-lsp.openrpc.json
docs/modules/ROOT/pages/: data.adoc  file_and_directory_set.adoc  how_it_works.adoc  index.adoc  installation.adoc  lsp.adoc  mcp.adoc  quickstart.adoc  usage.adoc
docs/reqstool/: manual_verification_results.yml  reqstool_config.yml  requirements.yml  software_verification_cases.yml
openspec/changes/consolidate-requirement-verdict/: design.md  proposal.md  tasks.md
openspec/specs/data-sources/: spec.md
openspec/specs/enrich/: spec.md
openspec/specs/export/: spec.md
openspec/specs/imports-and-filtering/: spec.md
openspec/specs/ingestion/: spec.md
openspec/specs/lifecycle/: spec.md
openspec/specs/lsp/: spec.md
openspec/specs/mcp/: spec.md
openspec/specs/parse-validation/: spec.md
openspec/specs/report/: spec.md
openspec/specs/status/: spec.md
openspec/specs/validate/: spec.md
src/reqstool/: command.py
src/reqstool/commands/: exit_codes.py
src/reqstool/commands/enrich/: enrich.py
src/reqstool/commands/generate_json/: generate_json.py
src/reqstool/commands/report/: report.py
src/reqstool/commands/status/: statistics_container.py  statistics_generator.py  status.py
src/reqstool/commands/validate/: validate.py
src/reqstool/common/: exceptions.py  filter_parser.py  jinja2.py  project_session.py  reqstool_ai_config.py  utils.py  validator_error_holder.py
src/reqstool/common/dataclasses/: lifecycle.py  urn_id.py
src/reqstool/common/enrichment/: enricher.py
src/reqstool/common/models/: lifecycle.py  urn_id.py
src/reqstool/common/queries/: details.py  list.py
src/reqstool/common/validators/: lifecycle_validator.py  semantic_validator.py  syntax_validator.py
src/reqstool/expression_languages/: generic_el.py  generic_el_transformer.py
src/reqstool/filters/: id_filters.py  requirements_filters.py  svcs_filters.py
src/reqstool/location_resolver/: location_resolver.py
src/reqstool/locations/: git_location.py  local_location.py  local_maven_location.py  local_npm_location.py  local_pypi_location.py  location.py  maven_location.py  npm_location.py  pypi_location.py
src/reqstool/lsp/: annotation_parser.py  project_state.py  root_discovery.py  server.py  workspace_manager.py  yaml_schema.py
src/reqstool/lsp/features/: code_actions.py  codelens.py  completion.py  hover.py  (+10 more)
src/reqstool/mcp/: server.py
src/reqstool/model_generators/: annotations_model_generator.py  combined_indexed_dataset_generator.py  combined_raw_datasets_generator.py  indexed_dataset_filter_processor.py  mvrs_model_generator.py  parsing_config.py  requirements_model_generator.py  svcs_model_generator.py  testdata_model_generator.py
src/reqstool/models/: annotations.py  combined_indexed_dataset.py  implementations.py  imports.py  mvrs.py  raw_datasets.py  requirements.py  svcs.py  test_data.py
src/reqstool/reqstool_config/: reqstool_config.py
src/reqstool/requirements_indata/: requirements_indata.py  requirements_indata_paths.py
src/reqstool/services/: export_service.py  statistics_service.py
src/reqstool/storage/: authorizer.py  database.py  database_filter_processor.py  el_compiler.py  el_to_sql_compiler.py  filter_processor.py  pipeline.py  populator.py  requirements_repository.py  schema.py
tests/e2e/: test_generate_command.py
tests/fixtures/: .reqstoolignore
tests/fixtures/reqstool-regression-python/: README.md  annotations.yml  manual_verification_results.yml  requirements.yml  software_verification_cases.yml
tests/resources/test_data/: .reqstoolignore
tests/unit/reqstool/: test_command.py
(+213 files in other folders)
