[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
    "build",
    "twine",
    "reqstool-python-hatch-plugin==0.1.4",
]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_classes = ["!TestDataModelGenerator", "!TestStatisticsItem"]
addopts = [
    "-rsxX",
    "-s",
    "--import-mode=importlib",
    "--log-cli-level=DEBUG",
    '-m not slow and not integration',
]
pythonpath = [".", "src", "tests"]
testpaths = ["tests"]
markers = [
    "flaky: tests that can randomly fail through no change to the code",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: tests that require external resources",
]

[project]
name = "reqstool"
dynamic = ["version"]
authors = [{ name = "reqstool" }]
description = "A tool for managing requirements with related tests and test results."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.10"
dependencies = [
    "colorama==0.4.6",
    "Jinja2==3.1.6",
    "jsonpickle==4.1.1",
    "jsonschema[format-nongpl]==4.26.0",
    "lark==1.3.1",
    "maven-artifact==0.3.5",
    "pygit2==1.19.1",
    "referencing==0.37.0",
    "requests-file==3.0.1",
    "ruamel.yaml==0.19.1",
    "tabulate==0.9.0",
    "reqstool-python-decorators==0.0.9",
    "packaging==26.0",
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
]

[project.urls]
Homepage = "https://reqstool.github.io"
Repository = "https://github.com/reqstool/reqstool-client"
Documentation = "https://github.com/reqstool/reqstool-client"
Source = "https://github.com/reqstool/reqstool-client"

[project.scripts]
reqstool = "reqstool.command:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.reqstool]
sources = ["src", "tests"]
test_results = "build/junit.xml"
dataset_directory = "docs/reqstool"
output_directory = "build/reqstool"

[tool.hatch.envs.dev]
dependencies = [
    "pytest==8.3.5",
    "pytest-sugar==1.0.0",
    "pytest-cov==6.1.1",
    "black==25.1.0",
    "flake8==7.2.0",
    "flake8-pyproject==1.2.3",
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
ignore = ["W503"]
addopts = [
    "-s",
    "--import-mode=importlib",
    "--log-cli-level=DEBUG",
    #    '-m not slow or not integration',
]
pythonpath = [".", "src", "tests"]
max-line-length = 125
# exclude = tests/*
max-complexity = 10
