[build-system]
requires = [
    "hatchling==1.29.0",
    "hatch-vcs==0.5.0",
    "build==1.4.0",
    "twine==6.2.0",
    "reqstool-python-hatch-plugin==0.1.5",
]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_classes = ["!TestDataModelGenerator"]
addopts = [
    "-rsxX",
    "-s",
    "--import-mode=importlib",
    "--log-cli-level=DEBUG",
]
pythonpath = [".", "src", "tests"]
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
markers = [
    "integration: tests that require external resources",
    "e2e: end-to-end tests that run the full pipeline locally",
]

[project]
name = "reqstool"
dynamic = ["version"]
authors = [{ name = "reqstool" }]
description = "A tool for managing requirements with related tests and test results."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.13"
dependencies = [
    "Jinja2==3.1.6",
    "jsonschema[format-nongpl]==4.26.0",
    "lark==1.3.1",
    "maven-artifact==0.3.5",
    "pydantic==2.12.5",
    "pygit2==1.19.1",
    "referencing==0.37.0",
    "requests-file==3.0.1",
    "rich>=13.0",
    "ruamel.yaml==0.19.1",
    "reqstool-python-decorators==0.1.0",
    "packaging==26.0",
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
    "pygls>=2.0,<3.0",
    "lsprotocol>=2024.0.0",
]

[project.urls]
Homepage = "https://reqstool.github.io"
Repository = "https://github.com/reqstool/reqstool-client"
Documentation = "https://github.com/reqstool/reqstool-client"
Source = "https://github.com/reqstool/reqstool-client"

[project.scripts]
reqstool = "reqstool.command:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.reqstool]
sources = ["src", "tests"]
test_results = "build/junit.xml"
dataset_directory = "docs/reqstool"
output_directory = "build/reqstool"

[tool.hatch.envs.dev]
dependencies = [
    "pytest==8.3.5",
    "pytest-sugar==1.0.0",
    "pytest-cov==6.1.1",
    "black==25.1.0",
    "flake8==7.2.0",
    "flake8-pyproject==1.2.3",
    "datamodel-code-generator==0.54.1",
    "pytest-asyncio>=0.25,<1.0",
]

[tool.hatch.envs.dev.scripts]
codegen = "bash -c 'base=$(mktemp -d) && tmp=$base/v1 && mkdir \"$tmp\" && cp src/reqstool/resources/schemas/v1/*.schema.json \"$tmp/\" && rm -f \"$tmp\"/*_output.schema.json && datamodel-codegen --disable-timestamp --input \"$tmp/\" --input-file-type jsonschema --output src/reqstool/models/generated/ --output-model-type pydantic_v2.BaseModel --use-schema-description --use-field-description --use-annotated --field-constraints --target-python-version 3.13 && rm -rf \"$base\"'"
codegen-check = "bash -c 'base=$(mktemp -d) && tmp=$base/v1 && mkdir \"$tmp\" && cp src/reqstool/resources/schemas/v1/*.schema.json \"$tmp/\" && rm -f \"$tmp\"/*_output.schema.json && datamodel-codegen --check --disable-timestamp --input \"$tmp/\" --input-file-type jsonschema --output src/reqstool/models/generated/ --output-model-type pydantic_v2.BaseModel --use-schema-description --use-field-description --use-annotated --field-constraints --target-python-version 3.13 && rm -rf \"$base\"'"

[tool.black]
line-length = 120
target-version = ['py313']
extend-exclude = '''
src/reqstool/models/generated
'''

[tool.flake8]
ignore = ["W503"]
addopts = [
    "-s",
    "--import-mode=importlib",
    "--log-cli-level=DEBUG",
    #    '-m not integration',
]
pythonpath = [".", "src", "tests"]
max-line-length = 125
per-file-ignores = ["src/reqstool/models/generated/*:E501,F722,W291"]
# exclude = tests/*
max-complexity = 10
